# automatafl

./: .gitignore  README.md  model.py  server.py
old_python_prototype/: README.md  game.html  learn.py  model.py  nc_server.py  play.py  play_rls.py  play_search.py  rl_learn.py  rl_learn_search.py  rls_see_rewards.py  search.py  see_rewards.py  server.py  test_game.py  ws_server.py
old_python_prototype/static/: style.css
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs  support.rs
rust/web/: Cargo.toml  index.css  index.html
rust/web/src/: lib.rs
static/: lib.js
templates/: root.html
