[package]
name = "automatafl"
version = "0.1.0"
authors = ["Ember Arlynx <ember@lunar.town>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaydoc = "0.1"
smallvec = "1.2.0"
vec_map = "0.8.1"
ndarray = "0.13.0"
