[package]
name = "automatafl-web"
description = "Web instantiation of the Automatafl game, powered by Moxie"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/emberian/automatafl"

[lib]
crate-type = [ "cdylib" ]

# TODO(https://github.com/rustwasm/wasm-pack/issues/696)
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
log = "*"
console_log = "0.1.2"
illicit = { git = "https://github.com/anp/moxie.git" }
moxie-dom = { git = "https://github.com/anp/moxie.git"  }
moxie = { git = "https://github.com/anp/moxie.git" }
tracing = { version = "^0.1", features = [ "log" ] }
wasm-bindgen = "0.2"
automatafl = { path = "../" }